[project]
name = "chen-reasoning-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dspy>=3.0.3",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "mlflow>=3.5.0",
    "openai>=2.4.0",
    "rich>=14.2.0",
    "transformers>=4.57.1",
]
