[project]
name = "chen-reasoning-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dspy>=3.0.3",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "rich>=14.2.0",
    "transformers>=4.57.1",
]
